# ragas-template

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
apps/pdf_question_bank/: __init__.py  adapter.py
apps/sample_python/: README.md  adapter.py
datasets/normalized/: sample_offline_rag_eval.csv
datasets/raw/: sample_questions_online.csv
docs/: models.json  pdf-to-dataset-requirement-design.md  rag-eval-architecture.md  rag-eval-engine-flow.md  sample-pdf-question-bank-workflow.md
outputs/: ragas_scores.csv
rag_eval/: __init__.py  compat.py  offline_eval.py  sample_rag_eval_dataset.csv  settings.py
rag_eval/adapters/: __init__.py  base.py  http.py  python.py
rag_eval/config/: __init__.py  loader.py  schema.py  validators.py
rag_eval/dataset_builder/: __init__.py  models.py  offline_converter.py  runner.py  schema.py  sources.py  writers.py
rag_eval/datasets/: __init__.py  loader.py  normalizers.py  validators.py
rag_eval/execution/: __init__.py  concurrency.py  errors.py  evaluator.py  runner.py
rag_eval/metrics/: __init__.py  factory.py  pipeline.py  registry.py
rag_eval/reporting/: __init__.py  artifacts.py  summary.py  writers.py
rag_eval/shared/: __init__.py  models.py  utils.py
scenarios/dataset_build/: real-multi-pdf-build.yaml  real-pdf-build.yaml  sample-pdf-build.yaml
scenarios/offline/: real-pdf-offline-smoke.yaml  sample-offline.yaml  sample-pdf-offline-smoke.yaml
scenarios/online/: sample-pdf-question-bank-online.yaml
tests/: test_dataset_build.py  test_offline_eval.py  test_online_eval.py
(+7 files in other folders)
